-add build folders, ide folder to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,18 @@
 *.exe
 *.out
 *.app
+
+# External dependencies
+external/
+
+# IDE folders
+idea/
+.vscode/
+
+# Build folders
+build/
+Build/
+cmake-build-*/
+log/
+install/
+
